<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">GetSend</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="access_token">sk.eyJ1IjoiYW5hZWx6IiwiYSI6ImNrOTZiaWp6djBkMngzZ3BjMmE2d2FkM3UifQ.J7imtyBcJKi2D7HF6uj2sQ</string>

    <string name="under_line_Profile">הפרופיל שלי</string>
    <string name="under_line_packages">רשימת החבילות</string>
    <string name="under_line_packages_picked">רשימת החבילות במיקום הנבחר</string>
    <string name="under_line_package">פרטי החבילה</string>
    <string name="confirm_delivery">אשר משלוח</string>


    <!--Location tracking activity permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!-- JoinAsDeliveryManActivity -->
    <string name="capital">Capital: %1$s</string>

    <!-- InviteDeliveryActivity -->
    <!-- xml-->
    <string name="under_line_order_delivery">הזמן משלוח</string>
    <string name="complete_the_following">מלא את הפרטים הבאים בנוגע לחבילה שלך: \</string>
    <string name="package_id">מספר מזהה חבילה: \</string>
    <string name="weight">משקל (גרם): \</string>
    <string name="size">גודל (סמ״ר): \ </string>
    <string name="location">מיקום: \</string>
    <string name="destination">יעד: \</string>
    <string name="click_here_to_choose_location">לחץ כאן לבחירת מיקום</string>
    <string name="upload_my_package">עדכון החבילה</string>
    <string name="status">סטטוס החבילה: \</string>

    <!--    SignatureActivity-->
    <string name="signature_title">חתימה דיגיטאלית</string>
    <string name="hint_sign">חתימה</string>
    <string name="dialog_title">חתום כאן</string>
    <string name="hint_cancel">ביטול</string>
    <string name="hint_clear">מחיקה</string>
    <string name="hint_save">שמור</string>

    <!--    PowerOfAttorney-->
    <string name="poa_title">ייפוי כח לקבלת דבר דואר</string>
    <string name="poa_content_1">הריני מייפה את כוחו של: </string>
    <string name="poa_content_2">מספר זהות: </string>
    <string name="poa_content_3">לקבל עבורי את דבר הדואר שמספרו הוא: </string>
    <string name="poa_content_4">שם הנמען: </string>
    <string name="poa_content_5">מספר זהות הנמען: </string>
    <string name="poa_content_6">תאריך: </string>
    <string name="poa_content_7">חתימת הנמען: </string>
    <string name="confirm">אישור </string>



    <!--    packageActivity-->
    <string name="btn_confirm_delivery">אשר משלוח</string>
    <string name="btn_delete_package">מחק חבילה</string>
    <string name="view_profile">צפיה בפרטי השליח</string>
    <string name="chat">צ׳ט עם השליח</string>
    <string name="chat2">צ׳ט עם הנמען</string>
    <string name="btn_reject_package">בטל משלוח</string>
    <string name="approve_delivery">אשר הגעה של החבילה</string>
    <string name="view_profile_owner">צפיה בפרטי הנמען</string>
    <string name="view_profile_owner_POA">צפיה בייפוי כוח</string>


    <!-- access to firebase failed-->
    <string name="error_message">החיבור לשרת נכשל, נסה להפעיל מחדש את האפליקציה</string>


    <!-- verification code-->
    <string name="verification_code_failed_Too_many_tries">יותר מידי ניסיונות! נסה שוב מאוחר יותר</string>
    <string name="verification_code_failed_please_try_again">בבקשה נסה שוב!</string>
    <string name="verification_code_sent">נשלח</string>
    <string name="User_does_not_exist">משתמש לא קיים</string>

    <string name="input_placeholder">כתוב הודעה</string>
    <string name="create_account">צור חשבון חדש</string>
    <string name="forgot_your_password"><u>שכחת סיסמא?</u></string>
    <string name="phone_number">מספר טלפון</string>
    <string name="confirm_password">אימות סיסמא</string>
    <string name="user_name">שם משתמש (שם פרטי + משפחה)</string>
    <string name="get_verification_code">קבל קוד אימות</string>
    <string name="verification_code">הקוד שהתקבל</string>
    <string name="password">סיסמא</string>
    <string name="id_number">מספר ת״ז</string>
    <string name="sign_up">הרשמה</string>
    <string name="new_password">סיסמא חדשה</string>
    <string name="sign_in">כניסה</string>
    <string name="join_as_deliverman">הצטרף כשליח</string>
    <string name="invite_delivery">הזמן משלוח</string>
    <string name="delete_package">חבילה נמחקה בהצלחה</string>
    <string name="reject_package">המשלוח בוטל</string>
    <string name="sms_send">נשלח בהצלחה SMS</string>
    <string name="sms_did_not_send"></string>

    <!--    MainActivity exit dialog-->
    <string name="exit_title">יציאה</string>
    <string name="exit_message">אתה בטוח שברצונך לצאת מהאפליקציה?</string>
    <string name="contact_us"><a href="mailto:contact.getandsend@gmail.com" target="_top">צור איתנו קשר</a></string>

    <string name="user_name_profile">שם משתמש: \</string>
    <string name="phone_number_profile">מספר טלפון: \</string>

    <!--    Package Status-->
    <string name="waiting">מחכה למשלוח</string>
    <string name="on_the_way">בדרך...</string>
    <string name="waiting_for_confirm">מחכה לאישור משלוח</string>
    <string name="arrived">הגיעה ליעד</string>

    <string name="send">שלח דירוג</string>
    <string name="rate_note">דרג את \</string>
    <string name="note">שלח הודעה לנמען החבילה</string>
    <string name="note_length">ההודעה צריכה להיות קצרה מ 160 תווים</string>


    <!--    ForgetPasswordActivity-->
    <string name="require_name">נא להזין שם משתמש</string>
    <string name="require_phone">נא להזין מספר טלפון</string>
    <string name="invalid_phone">מספר הטלפון אינו חוקי</string>
    <string name="require_pass">נא להזין סיסמא</string>
    <string name="invalid_pass">סיסמא צריכה להכיל לפחות 6 ספרות</string>
    <string name="require_validation">נא להזין קוד אימות</string>
    <string name="same_pass">סיסמאות לא תואמות</string>
    <string name="incorrect_validation">קוד אימות שגוי</string>
    <string name="user_added">משתמש נרשם בהצלחה</string>
    <string name="incorrect_id">נא להזין מספר ת״ז חוקי</string>

    <string name="main_expl">פתח את התפריט בצד המסך לצפייה ברשימות שלך…</string>


    <!--    dialog image MainActivity-->
    <string name="image_update">האם ברצונך לעדכן את תמונת הפרופיל שלך?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="update_img_successfully">התמונה עודכנה בהצלחה!</string>
    <string name="loading_image">התמונה נטענת, אנא המתן...</string>
    <string name="faild_to_upload_img">Failed to upload image</string>

    <!--    snackbar JoinAsDeliverymanActivity-->
    <string name="pick_package_snackbar">הגדל/הקטן את המפה בכדי לבחור חבילה\n לבחירת חבילה לחץ על הסימון</string>
    <string name="got_it_snackbar">הבנתי</string>
    <string name="click_here_to_update_your_profile_image">לחץ כאן בכדי לעדכן את\n➤ תמונת הפרופיל שלך</string>
    <string name="package_added">החבילה נוספה בהצלחה</string>
    <string name="resize_the_map">הגדל את המפה על מנת לבחור את החבילה</string>

</resources>
