<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteDeliveryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="13dp"
            android:gravity="center"
            android:text="@string/under_line_order_delivery"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ColorLightBlue"
            android:padding="7dp"
            android:text="@string/complete_the_following"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_id"
                android:textSize="17sp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edtxt_PackageIdID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textSize="17sp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edtxt_WeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/size"
                android:textSize="17sp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edtxt_SizeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:text="@string/location"
            android:textSize="17sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtxt_LocationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/click_here_to_choose_location"
            android:textSize="15sp"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="1dp"
            android:text="@string/destination"
            android:textSize="17sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtxt_DestinationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/click_here_to_choose_location"
            android:textSize="15sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_EnterID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/upload_my_package"
            android:textSize="17sp"
            android:background="@drawable/natural_round_button"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>